--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-integration'
 	implementation 'org.springframework.integration:spring-integration-ip:5.1.0.RELEASE'
 	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
